update ProductsFindByCategory